# QtTournamentTracker

./: CMakeLists.txt  Main.qml  README.md  main.cpp
content/: App.qml  CMakeLists.txt
content/screens/: CreatePrize.qml  CreatePrizeForm.ui.qml  CreateTeam.qml  CreateTeamForm.ui.qml  CreateTournament.qml  CreateTournamentForm.ui.qml  TournamentDashboard.qml  TournamentDashboardForm.ui.qml  TournamentViewer.qml  TournamentViewerForm.ui.qml
content/stringsdirectory/: ScreenNames.qml
content/tcomponents/: BaseCard.ui.qml  TListHeader.qml  TMatchupScoreComponent.qml  TMatchupScoreComponentForm.ui.qml  TNewMemberPanel.qml  TNewMemberPanelForm.ui.qml  TPlayerListComponent.qml  TPlayerListComponentForm.ui.qml  TPrizesListComponent.qml  TPrizesListComponentForm.ui.qml  TTeamComponent.qml  TTeamComponentForm.ui.qml  TTeamMembersComponent.qml  TTeamMembersComponentForm.ui.qml  TTeamScoreField.qml  TTeamScoreFieldForm.ui.qml  TTournamentComponent.qml  TTournamentComponentForm.ui.qml
content/tcontrols/: TCheckBox.ui.qml  TInputField.ui.qml
content/tviews/: TMatchupListView.ui.qml  TMatchupListViewDelegate.ui.qml  TTeamMembersListView.ui.qml  TTournamentPlayersList.ui.qml  TTournamentPlayersListDelegate.ui.qml  TTournamentPrizesList.ui.qml  TViewMatchUpComponent.qml  TViewMatchUpComponentForm.ui.qml
tracker_module/: CMakeLists.txt  MatchupDTO.h  MatchupEntryDTO.h  PersonDTO.h  PrizeDTO.h  TeamDTO.h  TournamentDTO.h  TournamentsDB.db  tracker_resources.qrc  trackerdatabase.cpp  trackerdatabase.h  trackersqlconnector.cpp  trackersqlconnector.h
